# the-Disaster-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
scripts/: test_agent.py  test_embeddings.py  test_extraction.py  test_generator.py  test_resource_tool.py  test_retriever.py  test_weather.py  verify.py
src/the_disaster_response_agent/agent/: __init__.py  disaster_agent.py
src/the_disaster_response_agent/api/: main.py
src/the_disaster_response_agent/data/: __init__.py  dataset_loader.py  preprocessor.py  schema.py
src/the_disaster_response_agent/data/adapters/: humaid_adapter.py
src/the_disaster_response_agent/nlp/: evaluator.py  extractor.py  prompts.py
src/the_disaster_response_agent/rag/: embeddings.py  generator.py  know_base.py  retriever.py
src/the_disaster_response_agent/tools/: __init__.py  resource_tool.py  weather_tool.py
src/the_disaster_response_agent/tools/agents/: __init__.py  agent.py
src/the_disaster_response_agent/utils/: __init__.py  config.py  similarity.py
tests/: test_agent.py  test_similarity.py
