[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-disaster-response-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "datasets>=5.0.0",
    "fastapi>=0.139.2",
    "groq>=1.5.0",
    "numpy>=2.5.1",
    "openai>=2.46.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "transformers>=5.14.1",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py313"
src = ["src"]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
